# web-extraction-agent

./: .env.example  CONTRIBUTING.md  Dockerfile.agent  Makefile  README.md  docker-compose.yml  get_auth0_token.py  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
tests/: test_main.py
web_extraction_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
web_extraction_agent/skills/web-extraction/: skill.yaml
