[project]
name = "web-extraction-agent"
version = "0.1.0"
description = "AI-powered agent that transforms unstructured web content into organized, structured data using Firecrawl and Exa search. Extracts comprehensive information from web pages and presents it in structured Pydantic models for easy processing and analysis."
authors = [{ name = "Paras Chamoli", email = "paras25619@gmail.com" }]
readme = "README.md"
keywords = ["python", "ai", "web", "scraping", "extraction", "firecrawl", "exa", "bindu", "mem0", "pydantic", "structured-data"]
requires-python = ">=3.12,<3.13"
dependencies = [
    "bindu>=2026.1.12",
    "agno>=2.2.0",
    "openai>=2.11.0",
    "exa-py>=2.0.0",
    "firecrawl-py>=0.0.11",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.45",
    "mem0ai>=1.0.1",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://Paraschamoli.github.io/web-extraction-agent/"
Repository = "https://github.com/Paraschamoli/web-extraction-agent"
Documentation = "https://Paraschamoli.github.io/web-extraction-agent/"
Issues = "https://github.com/Paraschamoli/web-extraction-agent/issues"
Changelog = "https://github.com/Paraschamoli/web-extraction-agent/releases"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "ty>=0.0.1a16",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web_extraction_agent"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["web_extraction_agent"]